--- a/images/10-k3s/Dockerfile
+++ b/images/10-k3s/Dockerfile
@@ -5,7 +5,8 @@ FROM ${REPO}/k3os-base:${TAG}
 ARG ARCH
 ENV ARCH ${ARCH}
 ENV VERSION v1.17.7+k3s1
-ADD https://raw.githubusercontent.com/rancher/k3s/${VERSION}/install.sh /output/install.sh
+ENV RELEASE 1.17
+ADD https://raw.githubusercontent.com/rancher/k3s/release-${RELEASE}/install.sh /output/install.sh
 ENV INSTALL_K3S_VERSION=${VERSION} \
     INSTALL_K3S_SKIP_START=true \
     INSTALL_K3S_BIN_DIR=/output
